<resources>
    <string name="app_name">Tasks</string>
    <string name="facebook_app_id">3063264823996028</string>
    <string name="facebook_client_token">9171b1f361998d283d6c711c0b21c04c</string>
    <string name="fb_login_protocol_scheme">fb3063264823996028</string>
    <string name="action_failed_please_check_internet_connection">Action failed, please check internet connection</string>
    <string name="action_canceled_please_check_facebook_login_and_password">Action canceled, please check facebook login and password</string>
    <string name="welcome_to_tasks_app">Welcome to Tasks app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="welcome_to_tasks">Welcome to Tasks</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up_to_tasks">Sign up to Tasks</string>
    <string name="create_new_account">create new account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_while_creating_account_with_google">Error while creating account with Google</string>
    <string name="confirm">Confirm</string>
    <string name="error_occurred_please_check_internet_connection">Error occurred, please check internet connection</string>
    <string name="choose_sign_up_method">Choose sign up method</string>
    <string name="short_password_please_choose_long_pass_min_6_symbols">Short password, please choose long pass (min. 6 symbols)</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="please_enter_same_password">"Please enter same password "</string>
    <string name="create_new_task">Create new task</string>
    <string name="save">Save</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_title">Enter title</string>
    <string name="_02_06_2021">02.06.2021</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="exm_of_date">14.10</string>
    <string name="you_don_t_have_tasks_start_add">You don\'t have tasks, start add</string>
    <string name="cancel">Cancel</string>
    <string name="update_task">Update Task</string>
    <string name="auth_was_cancel">Auth was cancel</string>
    <string name="tasks">Tasks</string>
    <string name="check_on_github">Check on GitHub</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="navigation_drawer_close">Close navigation drawable</string>
    <string name="navigation_drawer_open">Open navigation drawable</string>
    <string name="date_exm">14.10.2021</string>
    <string name="add_new_task">Add new task</string>
    <string name="user_email">User email</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="shared_pref_name">shared_pref</string>
    <string name="is_list_mode">isListMode</string>
    <string name="ok">Ok</string>
    <string name="title_expl_2">Short explanation 1/2</string>
    <string name="title_expl_1">Short explanation 2/2</string>
    <string name="msg_expl_1">Long click - will open a window for changing the task</string>
    <string name="msg_expl_2">One click - on a task will mark it as completed</string>
    <string name="is_explanation_showed">isExplanationShowed</string>
    <string name="show_explanation">Show explanation</string>
    <string name="close_and_open_the_app_to_see_the_explanation">Close and open the app to see the explanation</string>
    <string name="add_location">Add location?</string>
    <string name="add_image_to_current_task">Add image to current task?</string>
    <string name="please_turn_on_gps">Please turn on GPS</string>
</resources>