<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:checkableBehavior="single"
        android:title="@string/tasks">
        <menu>
            <item
                android:id="@+id/profileSettingsFragment"
                android:title="@string/check_on_github"
                android:visible="true"
                app:showAsAction="collapseActionView" />
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us"
                android:visible="true"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:visible="true"
                app:showAsAction="collapseActionView" />
        </menu>
    </item>
</menu>