<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutAuth_parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/layoutAuth_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:textColor="@color/white"
        android:textColorHint="@color/email_login" />

    <EditText
        android:id="@+id/layoutAuth_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textColor="@color/white"
        android:textColorHint="@color/email_login" />

    <EditText
        android:id="@+id/layoutAuth_confirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textColor="@color/white"
        android:textColorHint="@color/email_login"
        android:visibility="gone"/>

</LinearLayout>