<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/itemTask_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/exm_of_date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemTask_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemTask_image" />

    <TextView
        android:id="@+id/itemTask_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:maxLines="1"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/itemTask_image"
        app:layout_constraintStart_toEndOf="@+id/itemTask_date"
        app:layout_constraintTop_toTopOf="@+id/itemTask_image" />

    <TextView
        android:id="@+id/itemTask_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemTask_image"
        app:layout_constraintStart_toEndOf="@+id/itemTask_date"
        app:layout_constraintTop_toBottomOf="@+id/itemTask_title" />

    <ImageView
        android:id="@+id/itemTask_image"
        android:layout_width="@dimen/item_image_size"
        android:layout_height="@dimen/item_image_size"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_placeholder"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>