<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_manage_background"
    android:fillViewport="true"
    android:layoutDirection="ltr"
    tools:context=".ui.manage_task.ManageTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/manageTask_fragTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/amatica_sc"
            android:minWidth="@dimen/title_min_width"
            android:text="@string/create_new_task"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/manageTask_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/_02_06_2021"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/manageTask_fragTitle"
            app:layout_constraintStart_toStartOf="@+id/manageTask_fragTitle"
            app:layout_constraintTop_toBottomOf="@+id/manageTask_fragTitle" />


        <TextView
            android:id="@+id/manageTask_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/add_location"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/manageTask_fragTitle"
            app:layout_constraintStart_toStartOf="@+id/manageTask_fragTitle"
            app:layout_constraintTop_toBottomOf="@+id/manageTask_date" />

        <ProgressBar
            android:id="@+id/manageTask_pb"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/manageTask_location"
            app:layout_constraintEnd_toEndOf="@+id/manageTask_location"
            app:layout_constraintStart_toStartOf="@+id/manageTask_location"
            app:layout_constraintTop_toTopOf="@+id/manageTask_location" />

        <ImageButton
            android:id="@+id/manageTask_openMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="20dp"
            android:src="@drawable/ic_location"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/manageTask_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/manageTask_location"
            app:layout_constraintTop_toTopOf="@+id/manageTask_location" />

        <EditText
            android:id="@+id/manageTask_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/manageTask_fragTitle"
            app:layout_constraintStart_toStartOf="@+id/manageTask_fragTitle"
            app:layout_constraintTop_toBottomOf="@+id/manageTask_location" />

        <EditText
            android:id="@+id/manageTask_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/manageTask_fragTitle"
            app:layout_constraintStart_toStartOf="@+id/manageTask_fragTitle"
            app:layout_constraintTop_toBottomOf="@+id/manageTask_title" />

        <Button
            android:id="@+id/manageTask_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/sea_color"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/manageTask_fragTitle"
            app:layout_constraintStart_toStartOf="@+id/manageTask_fragTitle"
            app:layout_constraintTop_toBottomOf="@+id/manageTask_desc" />

        <ImageButton
            android:id="@+id/manageTask_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="#007D2B2B"
            android:padding="20dp"
            android:src="@drawable/ic_delete"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/manageTask_fragTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/manageTask_fragTitle"
            app:layout_constraintTop_toTopOf="@+id/manageTask_fragTitle"
            app:tint="#D04172" />

        <TextView
            android:id="@+id/manageTask_addImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="20dp"
            android:text="@string/add_image_to_current_task"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/manageTask_btn"
            app:layout_constraintStart_toStartOf="@+id/manageTask_btn"
            app:layout_constraintTop_toBottomOf="@+id/manageTask_btn" />

        <ImageView
            android:id="@+id/manageTask_image"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:src="@drawable/ic_placeholder"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/manageTask_addImage"
            app:layout_constraintStart_toStartOf="@+id/manageTask_addImage"
            app:layout_constraintTop_toBottomOf="@+id/manageTask_addImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>