<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemTask_parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="#4A0D5A62"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:strokeColor="#8AFFFFFF"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/itemTask_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/amatica_sc"
            android:text="@string/exm_of_date"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemTask_title"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTask_image" />

        <TextView
            android:id="@+id/itemTask_desc"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:maxLines="1"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTask_title" />

        <ImageView
            android:id="@+id/itemTask_image"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>