<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login"
    android:fillViewport="true"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signUp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/amatica_sc"
            android:text="@string/sign_up_to_tasks"
            android:textColor="@color/sea_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUp_newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatica_sc"
            android:text="@string/choose_sign_up_method"
            android:textColor="@color/sea_color"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/signUp_title"
            app:layout_constraintStart_toStartOf="@+id/signUp_title"
            app:layout_constraintTop_toBottomOf="@+id/signUp_title" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/signUp_btnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="signUp_email,signUp_google,signUp_facebook" />

        <Button
            android:id="@+id/signUp_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/sign_up_with_google"
            android:textAllCaps="false"
            android:textSize="@dimen/auth_btn_text_size"
            android:textStyle="bold"
            app:icon="@drawable/ic_google"
            app:iconSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/signUp_facebook"
            app:layout_constraintStart_toStartOf="@+id/signUp_facebook"
            app:layout_constraintTop_toBottomOf="@+id/signUp_newAccount" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/signUp_facebook"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_google" />

        <Button
            android:id="@+id/signUp_email"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/sea_color"
            android:text="@string/sign_up_with_email"
            android:textAllCaps="false"
            android:textSize="@dimen/auth_btn_text_size"
            app:icon="@drawable/ic_email"
            app:iconSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/signUp_facebook"
            app:layout_constraintStart_toStartOf="@+id/signUp_facebook"
            app:layout_constraintTop_toBottomOf="@+id/signUp_facebook" />

        <include
            android:id="@+id/include_auth"
            layout="@layout/layout_auth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/signUp_facebook"
            app:layout_constraintStart_toStartOf="@+id/signUp_facebook"
            app:layout_constraintTop_toBottomOf="@+id/signUp_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>